# paint-with-words-pipeline

./: README.md  pyproject.toml
.github/workflows/: ci.yaml  deploy_and_release.yaml
paint_with_words/: weight_functions.py
paint_with_words/helper/: aliases.py  attention.py  images.py
paint_with_words/models/: attention.py  attention_processor.py
paint_with_words/pipelines/: paint_with_words_pipeline.py
tests/helper/: aliases_test.py  attention_test.py  images_test.py
tests/pipelines/: paint_with_words_pipeline_test.py
