[tool.poetry]
name = "paint-with-words-pipeline"
version = "0.1.0"
description = ""
authors = ["Simo Ryu <cloneofsimo@gmail.com>", "Shunsuke KITADA <shunsuke.kitada.0831@gmail.com>"]
readme = "README.md"
packages = [{include = "paint_with_words"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
diffusers = "^0.19.3"
transformers = "^4.31.0"
torch = ">=2.0.0,!=2.0.1"
torchvision = "^0.15.1"
accelerate = "^0.21.0"
scipy = "^1.11.1"
ftfy = "^6.1.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.284"
black = "^23.7.0"
mypy = "^1.5.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
